--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/Views/Default/Index.cshtml
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/Views/Default/Index.cshtml
@@ -19,6 +19,7 @@
     <script>
         $(function () {
             var app = new Game.App();
+            app.Board.DrawDummyPlayer();
 
         });
     </script>
