installed node.js nuget package

--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/Views/Default/Index.cshtml
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/Views/Default/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
 }
 @section head{
-    <script src="@Url.Content("~/Scripts/game.js")"></script>
+    <script src="@Url.Content("~/Scripts/gameClient.js")"></script>
     <style type="text/css">
         canvas {
             border: 0;
@@ -17,7 +17,7 @@
 @section scripts{
     <script>
         $(function () {
-            var app = new Game.App();
+            var app = new GameClient.App();
           
 
         });
