start of turnbased cannot yet click and hand over turn

--- a/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/Views/Default/Index.html
+++ b/GladiatorTrainer/GladiatorTrainerGame/GladiatorTrainerGame/Views/Default/Index.html
@@ -14,7 +14,10 @@
         }
     </style>
 
- 
+    
+    <script>
+
+    </script>
 </head>
 <body>
     <canvas id="hexmap" width="660" height="624"></canvas>
@@ -29,5 +32,8 @@
 
     <script src="gameClient.js"></script>
     <div id="serverMessages"></div>
+    <button type="button" id="endTurnButton">End turn</button>
+
+   
 </body>
 </html>
